# TrackEventMapper

./: README.md  main.py  pyproject.toml  run.sh  setup_script.sh  url.py
app/event/: helper.py  views.py
app/event/serializer/: request.py  response.py
app/tracker/: helper.py  views.py
app/tracker/serializer/: request.py  response.py
database/: __init__.py  event_plan_mapper.py  events.py  track_plan.py
tests/: event_test.py  plan_test.py
tests/data/: patch_event.json  post_event.json  post_plan.json
